--- a/notes.html
+++ b/notes.html
@@ -142,7 +142,6 @@
                       <h4>Quantum Information (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -166,7 +165,6 @@
                       <h4>Quantum Optics (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -187,7 +185,6 @@
                       <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Math</span>
                       </div>
                     </div>
@@ -214,7 +211,6 @@
                       <h4>Advanced Classical Mechanics (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -235,9 +231,8 @@
                     <div class="course-header">
                       <h4>Quantum Theory of Matter (Spring 2024)</h4>
                       <div class="course-meta">
-                        <span class="pill">Graduate</span>
-                        <span class="pill">Core</span>
-                        <span class="pill">Physics</span>
+                        <span class="pill">Graduate</span
+                        ><span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -257,9 +252,8 @@
                     <div class="course-header">
                       <h4>Laser Technology (Spring 2024)</h4>
                       <div class="course-meta">
-                        <span class="pill">Graduate</span>
-                        <span class="pill">Core</span>
-                        <span class="pill">Physics</span>
+                        <span class="pill">Graduate</span
+                        ><span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -306,7 +300,6 @@
                       <h4>Mathematical Methods in Physics (Fall 2019)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Math</span>
                       </div>
                     </div>
@@ -345,7 +338,6 @@
                       <h4>Theoretical Mechanics (Fall 2019)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -373,7 +365,6 @@
                       <h4>Electromagnetics (Fall 2019)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -398,7 +389,6 @@
                       <h4>Optics (Spring 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -448,7 +438,6 @@
                       <h4>Analogue Electronics (Spring 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Engineering</span>
                       </div>
                     </div>
@@ -490,7 +479,6 @@
                       <h4>Quantum Mechanics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -527,7 +515,6 @@
                       <h4>Electrodynamics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -548,9 +535,8 @@
                     <div class="course-header">
                       <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                       <div class="course-meta">
-                        <span class="pill">Graduate</span>
-                        <span class="pill">Elective</span>
-                        <span class="pill">Physics</span>
+                        <span class="pill">Graduate</span
+                        ><span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -571,7 +557,6 @@
                       <h4>Digital Electronics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Elective</span>
                         <span class="pill">Engineering</span>
                       </div>
                     </div>
@@ -619,7 +604,6 @@
                       </h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -650,7 +634,6 @@
                       <h4>Solid State Physics (Spring 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
@@ -671,9 +654,8 @@
                     <div class="course-header">
                       <h4>Quantum Optics (Fall 2021)</h4>
                       <div class="course-meta">
-                        <span class="pill">Graduate</span>
-                        <span class="pill">Elective</span>
-                        <span class="pill">Physics</span>
+                        <span class="pill">Graduate</span
+                        ><span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -701,7 +683,6 @@
                       <h4>Introduction to Plasma Physics (Fall 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
-                        <span class="pill">Elective</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
