--- a/notes.html
+++ b/notes.html
@@ -709,7 +709,7 @@
                     <div class="course-header">
                       <h4>Quantum Mechanics II (Summer 2020)</h4>
                       <div class="course-meta">
-                        <span class="pill">Graduate</span>
+                        <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
