--- a/notes.html
+++ b/notes.html
@@ -982,10 +982,8 @@
     margin-bottom: 1.5rem;
   }
   .tag-group h4 {
-    color: #666;
-    font-size: 0.9em;
-    margin-bottom: 0.5rem;
-    text-transform: uppercase;
+    margin-top: 0.5rem;
+    margin-bottom: 0.4rem;
   }
 
   /* 调整标签颜色 */
