--- a/notes.html
+++ b/notes.html
@@ -85,28 +85,28 @@
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
-              <section class="tag-group">
+              <section class="tag-cloud">
                 <h4>University</h4>
                 <div class="tag-container" data-filter="university">
                   <!-- 动态生成大学标签 -->
                 </div>
               </section>
 
-              <section class="tag-group">
+              <section class="tag-cloud">
                 <h4>Year</h4>
                 <div class="tag-container" data-filter="year">
                   <!-- 动态生成年份标签 -->
                 </div>
               </section>
 
-              <section class="tag-group">
+              <section class="tag-cloud">
                 <h4>Level</h4>
                 <div class="tag-container" data-filter="level">
                   <!-- 动态生成级别标签 -->
                 </div>
               </section>
 
-              <section class="tag-group">
+              <section class="tag-cloud">
                 <h4>Subject</h4>
                 <div class="tag-container" data-filter="subject">
                   <!-- 动态生成学科标签 -->
@@ -887,7 +887,7 @@
 </html>
 
 <style>
-  /* 标签云样式 */
+  /* tag-cloud style */
   .tag-cloud {
     margin-top: 2rem;
   }
@@ -950,15 +950,6 @@
   }
   .pill[data-type="GRE"] {
     background: #c4b19d; /* 浅卡其色 */
-  }
-
-  /* 新增标签组样式 */
-  .tag-group {
-    margin-bottom: 1.5rem;
-  }
-  .tag-group h4 {
-    margin-top: 0.5rem;
-    margin-bottom: 0.4rem;
   }
 </style>
 
