--- a/notes.html
+++ b/notes.html
@@ -891,7 +891,7 @@
     display: inline-block;
     padding: 4px 12px;
     border-radius: 16px;
-    background: #f0f0f0;
+    background: white;
     cursor: pointer;
     transition: all 0.2s ease;
     font-size: 0.9em;
