--- a/notes.html
+++ b/notes.html
@@ -899,14 +899,14 @@
   }
 
   .tag-pill.active {
-    color: white;
+    color: black;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     transform: scale(1.05);
   }
 
   /* 调整课程卡片中的标签样式 */
   .course-meta .pill {
-    background: rgb(229, 226, 226);
+    background: rgb(243, 169, 80);
     color: white;
     border-radius: 15px;
     padding: 4px 8px;
